stylesheets/general.css
/* Normalization from http://git.io/normalize */
@import url(normalize.css);
/* Vertical flow, see http://blog.sigurdhsson.org/posts/I-X/on-web-typesetting.html */
@import url(verticalflow.css);
/* Webfonts */
@import url(//fonts.googleapis.com/css?family=PT+Serif);
@import url(//fonts.googleapis.com/css?family=Open+Sans);
@import url(//fonts.googleapis.com/css?family=Anonymous+Pro);
/* Basic font definitions */
html, button, input, select, textarea {
    font-family: 'PT Serif', serif;
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'Open Sans', sans-serif;
    font-kerning: normal;
}
p {
    font-variant-ligatures: common-ligatures;
    font-kerning: normal;
}
code, kbd, pre, samp {
    font-family: 'Anonymous Pro', monospace, serif;
}
/* Styling the posts */
body {
    background: #f9f9f9;
    color: #475345;
    padding: 0;
    margin: 0;
    overflow: auto;
    hyphens: auto;
}
body>article {
    min-width: 25em;
    max-width: 30em;
    margin: 0 auto;
}
body>article a {
    color: #627360;
    border-bottom: 1px dotted;
    text-decoration: none;
}
body>article a:hover {
    color: #D2392B;
}
body>article h1, body>article h2, body>article h3, body>article h4 {
    color: #D2392B;
}
article.post div.highlight {
    padding: 0 1em;
    margin: 0 -1em;
}
article hr {
    border: 0;
    border-top: 1px solid #475345;
}
.post+.anchor, .not-found+.anchor, .gone+.anchor {
    margin-top: 4.5em;
}
article>header>.pubdate {
    display: none;
}
.footnotes {
    margin-top: 2em;
    border-top: 1px solid #CCCFCC;
    font-size: smaller;
    color: #737D73;
}
.footnotes a {
    color: #868585;
}
.footnotes a:hover {
    color: #E36A64;
}
.footnotes ol {
    padding: 0;
    list-style-position: inside;
    counter-reset: footnotes;
    display: table;
}
.footnotes li {
    margin: 1ex 0;
    counter-increment: footnotes;
    display: table-row;
}
.footnotes li::before {
    content: counter(footnotes) ".";
    display: table-cell;
    text-align: right;
    padding-right: 1ex;
}
/* Styling the anchor stuff */
.anchor {
    padding: 1.5em;
    color: #262220;
    background: #e9e9e9;
    padding-bottom: 4em;
    border-top: 2em solid #f0f0f0;
}
.anchor a {
    /*color: #91815F;*/
    color: inherit;
}
.anchor a:hover {
    color: #D2392B;
}
.anchor h1 {
    /* From verticalflow.css, h3 */
    font-size:      1.276em;    /* base + 2/3 stop */
    line-height:    1.1755;
    margin-top:     1.9592em;
    margin-bottom:  0.3918em;
    font-weight:    normal;
}
.anchor nav ul {
    list-style: disc;
}
#posts, .anchor>footer {
    min-width: 25em;
    max-width: 30em;
    margin: 0 auto;
}
#author-name {
    display: none;
}
/* Styling the header/mast */
body>header.index-mark>h1 {
    font-size: 16em;
    text-align: center;
    margin-top:     0.140625em;
    margin-bottom:  0.046875em;
}
body>header.post-mark {
    min-width: 35em;
    max-width: 40em;
    margin: 0 auto;
    height: 0;
}
body>header.post-mark>h1 {
    font-size: 3em;
    text-align: left;
    line-height: 2.35em;
}
body>header>h1>a {
    text-decoration: none !important;
    color: #D2392B !important;
}
/* Styling the intentionally blank front page */
.index>p {
    visibility: hidden;
}
/* Restyling some elements */
table, table * {
    border-color: #475345 !important;
}
pre {
    margin: 0.9319em 0;
    padding: 0.9319em 3.7276ex;
}
div.highlight {
    margin: 0 !important;
    padding: 0 !important;
}
img {
    padding: .75em;
    margin: -.75em auto;
    background-color: #f0f0f0;
    max-width: 94%;
    display: block;
}
/* Profile picture */
#profile-pic {
    float: right;
    border-radius: 50%;
    padding: 3px;
    margin: 0 0 1.5ex 1.5em;
}
/* Social media stuff */
#social {
    list-style: none;
    padding: 0;
    margin: 3em auto;
    text-align: center;
}
#social li {
    display: inline-block;
    margin: 0 1em;
}
#social a {
    border: 0;
    color: #ccc;
}
#social a#social-tw:hover {
    color: #4099ff;
}
#social a#social-rd:hover {
    color: #ff4500;
}
#social a#social-hn:hover {
    color: #ff6600;
}
#social a span {
    display: none;
}

